# hyprgollum

./: CMakeLists.txt  Makefile  README.md  gollum.cpp  gollum.hpp  hyprpm.toml  main.cpp
